--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" type="image/svg+xml" href="assets/favicon.svg">
+    <link rel="icon" type="image/png" href="ApexClient.png">
+    <link rel="icon" type="image/x-icon" href="ApexClient.ico">
 </head>
 <body>
     <!-- Navigation -->
