Update download URL to raw file

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                             <li>Java 21 (auto-installed if needed)</li>
                         </ul>
                     </div>
-                    <a href="https://github.com/BlazeyCrazey/ApexClient-backend/releases/download/beta-1.0.2/ApexClient-BETA_1.0.2-win64.exe" class="btn btn-download">
+                    <a href="https://github.com/BlazeyCrazey/ApexClient-backend/raw/main/ApexClient-BETA_1.0.2-win64.exe" class="btn btn-download">
                         <svg class="btn-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                             <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path>
                             <polyline points="7,10 12,15 17,10"></polyline>
